--- a/Source/bin/cfg/spawn-config.cfg
+++ b/Source/bin/cfg/spawn-config.cfg
@@ -1,3 +1,3 @@
 // npc                 spawnX    spawnY   height      walk      maxhit      attack     defence      description
-
+spawn = 50      48      48      20       0       1       1       1
 [ENDOFSPAWNLIST]
